--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,8 @@ version = "1.10"
 optional = true
 
 [dev-dependencies]
-criterion = "0.8"
+criterion = "0.8.1"
+proptest = "1.9.0"
 
 [[bench]]
 name = "benchmarks"
