--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,13 @@ env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
 
-# Cancel in-progress runs for same PR/branch
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   # ============================================================================
-  # STAGE 1: Quick checks (run in parallel, fast feedback)
+  # STAGE 1: Quick checks (parallel, no deps)
   # ============================================================================
 
   fmt:
@@ -31,7 +30,41 @@ jobs:
       - run: cargo +nightly fmt --all -- --check
 
   check:
-    name: Check
+    name: Check (${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: dtolnay/rust-toolchain@stable
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: ${{ matrix.os }}
+          shared-key: stable
+
+      - run: cargo check --features "parallel,serde"
+
+  check-simd:
+    name: Check SIMD (nightly)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: dtolnay/rust-toolchain@nightly
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: simd
+          shared-key: nightly
+
+      - run: cargo +nightly check --all-features
+
+  check-no-std:
+    name: Check no_std
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
@@ -40,13 +73,13 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: check
+          prefix-key: no-std
           shared-key: stable
 
-      - run: cargo check --all-features
+      - run: cargo check --no-default-features
 
   # ============================================================================
-  # STAGE 2: Linting & Analysis (depends on check)
+  # STAGE 2: Linting (needs: check)
   # ============================================================================
 
   clippy:
@@ -65,7 +98,7 @@ jobs:
           prefix-key: clippy
           shared-key: stable
 
-      - run: cargo clippy --all-targets --all-features -- -D warnings
+      - run: cargo clippy --all-targets --features "parallel,serde" -- -D warnings
 
   doc:
     name: Documentation
@@ -81,18 +114,23 @@ jobs:
           prefix-key: doc
           shared-key: stable
 
-      - run: cargo doc --no-deps --all-features
+      - run: cargo doc --no-deps --features "parallel,serde"
         env:
           RUSTDOCFLAGS: -Dwarnings
 
   # ============================================================================
-  # STAGE 3: Testing (depends on clippy)
+  # STAGE 3: Testing (needs: clippy)
   # ============================================================================
 
   test:
-    name: Test
+    name: Test (${{ matrix.os }}, ${{ matrix.features || 'default' }})
     needs: clippy
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        features: ["", "serde", "parallel", "parallel,serde"]
     steps:
       - uses: actions/checkout@v6
 
@@ -100,59 +138,32 @@ jobs:
 
       - uses: Swatinem/rust-cache@v2
         with:
-          prefix-key: test
+          prefix-key: test-${{ matrix.os }}-${{ matrix.features || 'default' }}
           shared-key: stable
           cache-targets: true
 
       - name: Run tests
-        run: cargo test --all-features
-
-      - name: Run doc tests
-        run: cargo test --doc --all-features
-
-  test-no-std:
-    name: Test no_std
-    needs: check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: dtolnay/rust-toolchain@stable
-
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: no-std
-          shared-key: stable
-
-      - run: cargo check --no-default-features
-
-  test-features:
-    name: Test Feature Combinations
-    needs: clippy
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        features:
-          - ""
-          - "serde"
-          - "parallel"
-          - "parallel,serde"
-    steps:
-      - uses: actions/checkout@v6
-
-      - uses: dtolnay/rust-toolchain@stable
-
-      - uses: Swatinem/rust-cache@v2
-        with:
-          prefix-key: features-${{ matrix.features || 'default' }}
-          shared-key: stable
-
-      - name: Test with features [${{ matrix.features || 'default' }}]
         run: cargo test --features "${{ matrix.features }}"
 
+  test-simd:
+    name: Test SIMD (nightly)
+    needs: check-simd
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: dtolnay/rust-toolchain@nightly
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          prefix-key: test-simd
+          shared-key: nightly
+          cache-targets: true
+
+      - run: cargo +nightly test --all-features
+
   # ============================================================================
-  # STAGE 4: Coverage (depends on tests)
+  # STAGE 4: Coverage (needs: test, ubuntu only)
   # ============================================================================
 
   coverage:
@@ -173,7 +184,7 @@ jobs:
           cache-targets: true
 
       - name: Generate coverage
-        run: cargo llvm-cov --all-features --lcov --output-path lcov.info
+        run: cargo llvm-cov --features "parallel,serde" --lcov --output-path lcov.info
 
       - uses: codecov/codecov-action@v5
         with:
@@ -181,14 +192,14 @@ jobs:
           fail_ci_if_error: false
 
   # ============================================================================
-  # STAGE 5: Release automation (only on main push)
+  # STAGE 5: Changelog (only main push)
   # ============================================================================
 
   changelog:
     name: Changelog
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: [test, test-no-std, doc]
+    needs: [test, doc]
     permissions:
       contents: write
     steps:
@@ -261,26 +272,26 @@ jobs:
           git push
 
   # ============================================================================
-  # Final status check (for branch protection)
+  # Final gate (for branch protection)
   # ============================================================================
 
   ci-success:
     name: CI Success
     if: always()
-    needs: [fmt, check, clippy, doc, test, test-no-std, test-features, coverage]
+    needs: [fmt, check, check-simd, check-no-std, clippy, doc, test, test-simd, coverage]
     runs-on: ubuntu-latest
     steps:
-      - name: Check all jobs passed
+      - name: Check all jobs
         run: |
-          if [[ "${{ needs.fmt.result }}" != "success" ]] || \
-             [[ "${{ needs.check.result }}" != "success" ]] || \
-             [[ "${{ needs.clippy.result }}" != "success" ]] || \
-             [[ "${{ needs.doc.result }}" != "success" ]] || \
-             [[ "${{ needs.test.result }}" != "success" ]] || \
-             [[ "${{ needs.test-no-std.result }}" != "success" ]] || \
-             [[ "${{ needs.test-features.result }}" != "success" ]] || \
-             [[ "${{ needs.coverage.result }}" != "success" ]]; then
-            echo "One or more jobs failed"
-            exit 1
-          fi
+          results=("${{ needs.fmt.result }}" "${{ needs.check.result }}" \
+                   "${{ needs.check-simd.result }}" "${{ needs.check-no-std.result }}" \
+                   "${{ needs.clippy.result }}" "${{ needs.doc.result }}" \
+                   "${{ needs.test.result }}" "${{ needs.test-simd.result }}" \
+                   "${{ needs.coverage.result }}")
+          for r in "${results[@]}"; do
+            if [[ "$r" != "success" ]]; then
+              echo "CI failed"
+              exit 1
+            fi
+          done
           echo "All CI checks passed!"
