--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -192,13 +192,13 @@ jobs:
           fail_ci_if_error: false
 
   # ============================================================================
-  # STAGE 5: Changelog (only main push)
+  # STAGE 5: Changelog (every push, skip bot commits)
   # ============================================================================
 
   changelog:
     name: Changelog
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && !contains(github.event.head_commit.message, 'chore: update changelog')
     needs: [test, doc]
     permissions:
       contents: write
@@ -206,6 +206,7 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 0
+          ref: ${{ github.ref }}
 
       - name: Generate Changelog
         uses: actions/github-script@v7
