--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -198,7 +198,7 @@ jobs:
   changelog:
     name: Changelog
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && !contains(github.event.head_commit.message, 'chore: update changelog')
+    if: "github.event_name == 'push' && !contains(github.event.head_commit.message, 'chore: update changelog')"
     needs: [test, doc]
     permissions:
       contents: write
