--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -340,6 +340,37 @@ jobs:
           git push
 
   # ============================================================================
+  # STAGE 6: Publish to crates.io (main only, new version only)
+  # ============================================================================
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: [test, test-simd, coverage]
+    steps:
+      - uses: actions/checkout@v6
+
+      - uses: dtolnay/rust-toolchain@stable
+
+      - name: Check version and publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+        run: |
+          VERSION=$(grep -m1 '^version' Cargo.toml | sed 's/.*"\(.*\)"/\1/')
+          echo "Local version: $VERSION"
+
+          # Check if version exists on crates.io
+          HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" "https://crates.io/api/v1/crates/tsetlin-rs/$VERSION")
+
+          if [ "$HTTP_CODE" = "200" ]; then
+            echo "Version $VERSION already published, skipping"
+          else
+            echo "Version $VERSION not found on crates.io, publishing..."
+            cargo publish
+          fi
+
+  # ============================================================================
   # Final gate (for branch protection)
   # ============================================================================
 
