--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,39 +1,56 @@
-# SPDX-FileCopyrightText: 2026 RAprogramm <andrey.rozanov.vl@gmail.com>
-# SPDX-License-Identifier: MIT
-
 version = 1
+SPDX-PackageName = "tsetlin-rs"
+SPDX-PackageSupplier = "RAprogramm <andrey.rozanov.vl@gmail.com>"
+SPDX-PackageDownloadLocation = "https://github.com/RAprogramm/tsetlin-rs"
 
 [[annotations]]
-path = ["Cargo.toml", "Cargo.lock"]
-SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = ["README.md", "CHANGELOG.md", "SECURITY.md"]
-SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = [".github/**", ".gitignore", ".gitattributes"]
-SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
-SPDX-License-Identifier = "MIT"
-
-[[annotations]]
-path = ["benches/**", "examples/**", "tests/**"]
+path = [
+    "README.md",
+    "CHANGELOG.md",
+    "SECURITY.md",
+    ".gitignore",
+    ".gitattributes",
+    ".rustfmt.toml",
+    "Cargo.toml",
+    "Cargo.lock",
+    "codecov.yml",
+]
+precedence = "aggregate"
 SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
 SPDX-License-Identifier = "MIT"
 
 [[annotations]]
 path = "src/**"
+precedence = "aggregate"
 SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
 SPDX-License-Identifier = "MIT"
 
 [[annotations]]
-path = ["*.json", "*.yml", "*.yaml", "*.toml"]
+path = "tests/**"
+precedence = "aggregate"
 SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
 SPDX-License-Identifier = "MIT"
 
 [[annotations]]
-path = [".github/assets/**"]
+path = "benches/**"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
+SPDX-License-Identifier = "MIT"
+
+[[annotations]]
+path = "examples/**"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
+SPDX-License-Identifier = "MIT"
+
+[[annotations]]
+path = ".github/**"
+precedence = "aggregate"
+SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
+SPDX-License-Identifier = "MIT"
+
+[[annotations]]
+path = ".github/assets/**"
+precedence = "override"
 SPDX-FileCopyrightText = "2026 RAprogramm <andrey.rozanov.vl@gmail.com>"
 SPDX-License-Identifier = "CC0-1.0"
